# quickjs-cmake-mingw

./: CMakeLists.txt  LICENSE  README.md
